--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,8 @@ google_site_verification: rI4L5J1R-IwI6BZv4wOvzqoCwF43fFbL3DBjvlVnylQ
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: G-21DP3Q3ETJ
+  # fill in your Google Analytics ID
 
 # Prefer color scheme setting.
 #
