--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -6,6 +6,14 @@
 # - type: twitter
 #   icon: "fab fa-twitter"
 
+- type: portfolio
+  icon: "fa-solid fa-house"
+  url: "https://leehs-portfolio.vercel.app/"
+
+- type: baekjoon-online-judge
+  icon: "fa-sharp fa-solid fa-code"
+  url: "https://solved.ac/profile/abc2752"
+
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
