--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: 이호승
-  email: abc2752@snu.ac.kr # change to your email address
+  email: abc2752@naver.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username # change to your twitter homepage
