--- a/.github/workflows/style-lint.yml
+++ b/.github/workflows/style-lint.yml
@@ -21,5 +21,8 @@ jobs:
 
       - name: Setup Node
         uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       - run: npm i
       - run: npm test
